ecmascript/parser/tests/jsx/errors/adjacent-tags/input.js.stderr
error: Expected Semi
 --> $DIR/tests/jsx/errors/adjacent-tags/input.js:1:23
  |
1 | var x = <div>one</div><div>two</div>;
  |                       ^

